Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ One way to organize information in a clean way is to use beautiful, modern flat 
 <a id="apps-menus" class="anchor" href="#apps-menus" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Apps Menus</h3>
 
 <p>Enterprise Apps Menus
-<img src="https://goo.gl/photos/mXWWvapwZprzXWSJA" alt="Apps Menus"></p>
+<img src="https://yadi.sk/i/c87LI82ExueoE" alt="Apps Menus"></p>
 
 <h3>
 <a id="new-kanban-view" class="anchor" href="#new-kanban-view" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>New Kanban View</h3>
